@@ -12,29 +12,23 @@ module Heirloom
     def download(args)
       @region = args[:region]
       @base_prefix = args[:base_prefix]
-      extract = args[:extract]
-      output = args[:output] ||= './'
+      @extract = args[:extract]
+      @secret = args[:secret]
+      @output = args[:output] ||= './'
+
+      @logger.info "Downloading s3://#{bucket}/#{key} from #{@region}."
 
       s3_downloader = Downloader::S3.new :config => @config,
                                          :logger => @logger,
                                          :region => @region
 
-      @logger.info "Downloading s3://#{bucket}/#{key} from #{@region}."
       raw_archive = s3_downloader.download_file :bucket => bucket,
                                                 :key    => key
 
-      @logger.info "Decrypting archive."
-      archive = cipher.decrypt_data :data   => raw_archive, 
-                                    :secret => '12345678901234567890123456789012'
+      @archive = cipher.decrypt_data :data   => raw_archive, 
+                                     :secret => @secret
 
-      if extract
-        extracter = Extracter.new :config => @config
-        extracter.extract :archive => archive, :output => output
-      else
-        output_file = File.join output, file
-        @logger.info "Writing archive to '#{output_file}'."
-        File.open(output_file, 'w') { |local_file| local_file.write archive }
-      end
+      save_archive
 
       @logger.info "Download complete."
     end
@@ -53,8 +47,22 @@ module Heirloom
       "#{@base_prefix}-#{@region}"
     end
 
+    def save_archive
+      if @extract
+        extracter.extract :archive => @archive, :output => @output
+      else
+        output_file = File.join @output, file
+        @logger.info "Writing archive to '#{output_file}'."
+        File.open(output_file, 'w') { |local_file| local_file.write @archive }
+      end
+    end
+
+    def extracter
+      @extracter ||= Extracter.new :config => @config
+    end
+
     def cipher
-      @cipher = Heirloom::Cipher.new :config => @config
+      @cipher ||= Cipher.new :config => @config
     end
   end
 end
