@@ -45,11 +45,13 @@ EOS
                                                                                                 :multi => true
           opt :help, "Display Help"
           opt :id, "ID of the archive to authorize.", :type => :string
-          opt :key, "AWS Access Key", :type => :string
           opt :level, "Log level [debug|info|warn|error].", :type    => :string,
                                                             :default => 'info'
-          opt :secret, "AWS Secret Access Key", :type => :string
           opt :name, "Name of archive.", :type => :string
+          opt :aws_access_key, "AWS Access Key ID", :type => :string, 
+                                                    :short => :none
+          opt :aws_secret_key, "AWS Secret Access Key", :type => :string, 
+                                                        :short => :none
         end
       end
 
