@@ -34,7 +34,8 @@ module Heirloom
         build = @archive.build :bucket_prefix => @opts[:base_prefix],
                                :directory     => @opts[:directory],
                                :exclude       => @opts[:exclude],
-                               :git           => @opts[:git]
+                               :git           => @opts[:git],
+                               :secret        => @opts[:secret]
 
         if build
           @archive.upload :bucket_prefix   => @opts[:base_prefix],
@@ -62,12 +63,11 @@ heirloom build -n NAME -i ID -b BASE_PREFIX -r REGION1 -r REGION2 -d DIRECTORY_T
 
 EOS
           opt :base_prefix, "Base bucket prefix which will be combined with region. \
-For example: -b 'test' -r 'us-west-1'  will expect bucket 'test-us-west-1' to be present", :type => :string
+For example: -b 'test' -r 'us-west-1'  will expect bucket 'test-us-west-1' \
+to be present", :type => :string
           opt :directory, "Source directory of build.", :type  => :string
           opt :exclude, "File(s) or directorie(s) to exclude. \
-Can be specified multiple times.", :type  => :string, 
-                                   :multi => true
-          opt :key, "AWS Access Key ID", :type => :string
+Can be specified multiple times.", :type  => :string, :multi => true
           opt :git, "Read git commit information from directory and set as archive attributes."
           opt :help, "Display Help"
           opt :id, "ID for archive (when -g specified, assumed to be GIT sha).", :type => :string
@@ -75,9 +75,13 @@ Can be specified multiple times.", :type  => :string,
                                                             :default => 'info'
           opt :name, "Name of archive.", :type => :string
           opt :public, "Set this archive as public readable?"
-          opt :region, "Region(s) to upload archive.  Can be specified multiple times.", :type  => :string,
-                                                                                         :multi => true
-          opt :secret, "AWS Secret Access Key", :type => :string
+          opt :region, "Region(s) to upload archive. \
+Can be specified multiple times.", :type  => :string, :multi => true
+          opt :secret, "Encrypt the archive with given secret.", :type => :string
+          opt :aws_access_key, "AWS Access Key ID", :type => :string, 
+                                                    :short => :none
+          opt :aws_secret_key, "AWS Secret Access Key", :type => :string, 
+                                                        :short => :none
         end
       end
 
