@@ -43,12 +43,14 @@ EOS
           opt :attribute, "Attribute to update.", :type => :string
           opt :help, "Display Help"
           opt :id, "ID of the archive to display.", :type => :string
-          opt :key, "AWS Access Key ID", :type => :string
           opt :level, "Log level [debug|info|warn|error].", :type    => :string,
                                                             :default => 'info'
           opt :name, "Name of archive.", :type => :string
-          opt :secret, "AWS Secret Access Key", :type => :string
           opt :updated_value, "Updated value of attribute.", :type => :string
+          opt :aws_access_key, "AWS Access Key ID", :type => :string, 
+                                                    :short => :none
+          opt :aws_secret_key, "AWS Secret Access Key", :type => :string, 
+                                                        :short => :none
         end
       end
     end
