@@ -37,7 +37,8 @@ describe Heirloom do
     @archive_mock.should_receive(:download).with :output      => '/tmp/test123',
                                                  :region      => 'us-east-1',
                                                  :base_prefix => 'base',
-                                                 :extract     => false
+                                                 :extract     => false,
+                                                 :secret      => nil
     @cli_download.should_receive(:ensure_directory).
                   with(:config => @config_mock, 
                        :path => '/tmp/test123').
